[gd_scene load_steps=3 format=3 uid="uid://cttmvqll5keqh"]

[ext_resource type="Script" path="res://test_scene.gd" id="1_x3ou2"]
[ext_resource type="PackedScene" uid="uid://cf8oiwjc05gon" path="res://arena.tscn" id="2_ns03s"]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_x3ou2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -20.0
offset_right = 65.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ServerButton" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 2
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 2
text = "Client"

[node name="StopButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Stop Game"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Sync Lost, attempting to regain..."

[node name="Background" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -1
visible = false

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Arena" parent="." instance=ExtResource("2_ns03s")]
unique_name_in_owner = true

[connection signal="pressed" from="CanvasLayer/ButtonContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StopButton" to="." method="_on_stop_button_pressed"]
